# server

./: README.md
project/: .env  .gitignore  Cargo.toml
project/client/: index.html
project/migrations/2017-10-10-104407_create_contactrecords/: down.sql  up.sql
project/migrations/2017-10-10-104407_create_events/: up.sql
project/src/: lib.rs  main.rs
project/src/api/: mod.rs  routes.rs
project/src/database/: mod.rs
