[package]
name = "mijnadres-server"
version = "0.1.0"
authors = ["Daan van Berkel <daan.v.berkel.1980@gmail.com>"]

[dependencies]
log = "0.3.8"
simplelog = "0.4.2"
staticfile = "*"
router = "*"
serde = "1.0.15"
serde_json = "1.0.3"
serde_derive = "1.0.15"

[dependencies.iron]
version = "*"

[dependencies.mount]
git = "https://github.com/iron/mount.git"

[dependencies.logger]
git = "https://github.com/iron/logger.git"