[package]
name = "mijnadres-server"
version = "0.1.0"
authors = ["Daan van Berkel <daan.v.berkel.1980@gmail.com>"]

[dependencies]
log = "0.3.8"
simplelog = "0.4.2"
serde = "1.0.15"
serde_json = "1.0.3"
serde_derive = "1.0.15"
diesel = { version = "0.16.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.9.0" 
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"

[dependencies.iron]
version = "*"

[dependencies.staticfile]
version = "*"

[dependencies.router]
version = "*"

[dependencies.persistent]
version = "*"

[dependencies.mount]
git = "https://github.com/iron/mount.git"

[dependencies.logger]
git = "https://github.com/iron/logger.git"
